k8s/postgres/pg-ingress.yml
---
# ingress
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: postgres-ingress
  namespace: lutergs
spec:
  ingressClassName: nginx
  rules:
    - host: ntfy2.lutergs.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ntfy-test
                port:
                  number: 80
